# modal-webrtc

./: .gitignore  pyproject.toml
modal_webrtc/: __init__.py  modal_webrtc.py  webrtc_realtimestt.py  webrtc_yolo_test.py
modal_webrtc/client-js/: modal_webrtc.js
modal_webrtc/frontend/: index.html  modal_webrtc.js  webcam_webrtc.js
