[project]
name = "modal-webrtc"
version = "0.1.0"
description = "Python and JavaScript code for using WebRTC with Modal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiortc>=1.13.0",
    "fastapi>=0.117.1",
    "modal>=1.1.4",
    "shortuuid>=1.0.13",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/modal-projects/modal-webrtc"
